--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-hacker
-itle: [About Arjunil Pathak]
+theme: hacker
+title: [About Arjunil Pathak]
 description: [Find out about the work in progress that is Arjunil Pathak]
